--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - Tango Football Club</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -90,3 +90,4 @@
     <script src="../js/gallery.js"></script>
 </body>
 </html>
+
