--- a/pages/history.html
+++ b/pages/history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Club History & Achievements - Tango Football Club</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -128,3 +128,4 @@
     <script src="../js/history.js"></script>
 </body>
 </html>
+
