--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="roster.html">Player Roster</a></li>
-                <li><a href="matches.html">Matches</a></li>
-                <li><a href="history.html">Club History</a></li>
+                <li><a href="pages/index.html" class="active">Home</a></li>
+                <li><a href="pages/roster.html">Player Roster</a></li>
+                <li><a href="pages/matches.html">Matches</a></li>
+                <li><a href="pages/history.html">Club History</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle">Gallery ▼</a>
                     <div class="dropdown-menu">
                         <div class="dropdown-group">
-                            <a href="gallery.html#videos" class="dropdown-group-title">📹 Videos</a>
-                            <a href="gallery.html?type=videos&sub=matchday" class="dropdown-item">Matchday Videos</a>
-                            <a href="gallery.html?type=videos&sub=champions" class="dropdown-item">2025/26 MOSSL Champions Celebrations</a>
+                            <a href="pages/gallery.html#videos" class="dropdown-group-title">📹 Videos</a>
+                            <a href="pages/gallery.html?type=videos&sub=matchday" class="dropdown-item">Matchday Videos</a>
+                            <a href="pages/gallery.html?type=videos&sub=champions" class="dropdown-item">2025/26 MOSSL Champions Celebrations</a>
                         </div>
                         <div class="dropdown-group">
-                            <a href="gallery.html#pictures" class="dropdown-group-title">🖼️ Pictures</a>
-                            <a href="gallery.html?type=pictures&sub=matchday" class="dropdown-item">Matchday Pictures</a>
-                            <a href="gallery.html?type=pictures&sub=champions" class="dropdown-item">2025/26 MOSSL Champions Celebrations</a>
+                            <a href="pages/gallery.html#pictures" class="dropdown-group-title">🖼️ Pictures</a>
+                            <a href="pages/gallery.html?type=pictures&sub=matchday" class="dropdown-item">Matchday Pictures</a>
+                            <a href="pages/gallery.html?type=pictures&sub=champions" class="dropdown-item">2025/26 MOSSL Champions Celebrations</a>
                         </div>
                     </div>
                 </li>
-                <li><a href="admin.html">Admin</a></li>
+                <li><a href="pages/admin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
